# fantasy-premier-league

./: .dockerignore  .gitignore  DATABASE_OPTIMIZATION.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  entrypoint_fast.sh  env.example  name_parser.ipynb  pyproject.toml  run-dev.sh  run.sh  temp_deps.txt  test_database.py
alembic/: env.py
alembic/versions/: 11df647a6578_create_gameweek_history_tables_for_all_.py  2025_08_24_2229-35e3aec009b9_all_players_table.py  2025_08_25_0237-7e9a5ba0b64e_add_foreign_key_to_individual_.py  2025_08_28_0208-cc575d3bf1d3_create_table_for_latest_season.py  2025_08_28_1353-778c487fa8c9_removing_not_null_constraint_for_was_.py  2025_08_28_1435-d814d975d80f_removing_not_null_constraint_from_.py  2025_08_28_1500_clean_base.py  2025_08_28_1600_recreate_complete_schema.py  2692fb6146b7_add_player_season_history_table.py  2aef30611a72_change_selected_field_to_bigint.py  4cb1f2f0358b_add_code_field_to_teams.py  529a87fbd22a_applying_event_trigger_to_tables.py  55c1bfe77010_database_setup.py  5ec048f750bf_add_uuid_support_and_fpl_id_fields.py  6cfa7c51aaa0_adding_cost_to_players.py  6fb84642ef21_change_player_season_history_player_id_.py  76bc4cebde78_creating_event_table.py  81d12b798359_change_player_id_to_uuid.py  add_foreign_keys_to_all_players.py  ae7f68270204_initial_fpl_database_setup.py  d3ac77b7e5e8_add_winning_goals_to_19_20.py  ee5b778a29a4_change_all_ids_to_uuid.py  fix_all_players_table_structure.py
examples/: database_usage.py
fantasy_premier_league/: database.py
fantasy_premier_league/data_utils/: data_loading.py  file_loader.py
fantasy_premier_league/database/: README.md  __init__.py  config.py  connection.py  session.py  utils.py
fantasy_premier_league/models/: __init__.py  all_players.py  base.py  gameweek.py  player.py  player_gameweek_history.py  player_history.py  team.py
scripts/: README.md  create_dump.py  db_check.py  load_data.py  populate_foreign_keys.py  restore_dump.py
